# bcr_cpp

./: README.md  author.md  helper.txt
bcr_dataset/: README.md
source/: CMakeLists.txt  main.cpp
source/inc/: animation_manager.hpp  bar_chart.hpp  bar_item.hpp  database.hpp
source/rsc/: animation_manager.cpp  database.cpp
